# BootThatISO-WITHOUT-USB---NO-USB-NEEDED-

./: .clang-format  .gitignore  ANALISIS_COMPARATIVO_USB_vs_BOOTTHATISO.md  ARCHITECTURE.md  AUDITORIA.md  BootWimProcessor_new.cpp  CLEANUP.md  CMakeLists.txt  CORRECCIONES_INTENTADAS.md  EFI_PARTITION_PROTECTION.md  HBCD_PE.ini  HBCD_PE_CORRECTO.ini  LANGUAGE_DEPENDENCY_ISSUES.md  LANGUAGE_DIALOG_REDESIGN.md  LICENSE  MISSING_LOCALIZATION_STRINGS.md  PLAN_CORRECCION.md  PLAN_CORRECCIONES.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.md  README.pt.md  README.ru.md  README.zh.md  README_RECOMENDACION.md  REFACTORING_SUMMARY.md  SrtTrail.txt  TAREAS.md  WINDOWS_FIX_SUMMARY.md  WINDOWS_INSTALL_FIX.md  analisis.md  bcd-all.txt  bootwim_contents.txt  check_pe.ps1  compilar.bat  diagnostico_particiones.cpp  gnu-efi.tar.bz2  (+15 more)
.github/workflows/: release-attach.yml  release.yml
chainloader/: README.md  grubx64.efi
include/: BCDEntryManager.h  BCDLogger.h  BCDVolumeManager.h  EFIManager.h  VolumeManager.h  grubx64_efi.cpp  grubx64_efi.h  mainwindow.h  version.h.in
include/models/: HashInfo.h  PartitionDetector.h  VolumeManager.h  WmiStorageManager.h
lang/: ar_sa.xml  de_de.xml  en_us.xml  es_cr.xml  fr_fr.xml  hi_in.xml  it_it.xml  ja_jp.xml  ko_kr.xml  pt_br.xml  ru_ru.xml  tr_tr.xml  zh_cn.xml
logs/: copy_error_log.txt  debug_drives.txt  debug_drives_efi.txt  general_log.txt  iso_extract_log.txt  reformat_log.txt
src/: BootThatISO.manifest  BootThatISO.rc  BootThatISO.rc.in  EasyISOBoot.rc  SevenZipGuids.cpp  bcdmanager.cpp  bcdmanager.h  constants.h  isocopymanager.cpp  isocopymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  partitionmanager.cpp  partitionmanager.h  resource.h
src/boot/: BootWimProcessor.cpp  BootWimProcessor.h
src/config/: IniFileProcessor.cpp  IniFileProcessor.h  PecmdConfigurator.cpp  PecmdConfigurator.h  StartnetConfigurator.cpp  StartnetConfigurator.h
src/controllers/: ProcessController.cpp  ProcessController.h  ProcessService.cpp  ProcessService.h
src/drivers/: DriverIntegrator.cpp  DriverIntegrator.h
src/filesystem/: ProgramsIntegrator.cpp  ProgramsIntegrator.h
src/models/: BootStrategy.h  BootStrategyFactory.h  BootWimProcessor.cpp  BootWimProcessor.h  ConsoleObserver.h  ContentExtractor.cpp  ContentExtractor.h  DiskIntegrityChecker.cpp  DiskIntegrityChecker.h  DiskpartExecutor.cpp  DiskpartExecutor.h  EventManager.h  EventObserver.h  ExtractedBootStrategy.h  HashVerifier.cpp  HashVerifier.h  ISOReader.cpp  ISOReader.h  IniConfigurator.cpp  IniConfigurator.h  LinuxBootStrategy.h  PartitionCreator.cpp  PartitionCreator.h  PartitionDetector.cpp  PartitionDetector.h  PartitionReformatter.cpp  PartitionReformatter.h  RamdiskBootStrategy.h  RecoverySteps.cpp  RecoverySteps.h  SpaceManager.cpp  SpaceManager.h  SpaceValidationResult.h  VolumeDetectionStrategy.cpp  VolumeDetectionStrategy.h  VolumeDetector.cpp  VolumeDetector.h  VolumeManager.cpp  VolumeManager.h  efimanager.cpp  (+5 more)
src/services/: BCDEntryManager.cpp  BCDLogger.cpp  BCDVolumeManager.cpp  DiskLogger.cpp  DiskLogger.h  EFIManager.cpp  PartitionDetector.cpp  PartitionDetector.h  VolumeManager.cpp  VolumeManager.h  bcdmanager.cpp  bcdmanager.h  isocopymanager.cpp  isocopymanager.h  isotypedetector.cpp  isotypedetector.h  partitionmanager.cpp  partitionmanager.h
src/utils/: AppKeys.h  LocalizationHelpers.h  LocalizationManager.cpp  LocalizationManager.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h  constants.h
src/views/: EditionSelectorDialog.cpp  EditionSelectorDialog.h  mainwindow.cpp  mainwindow.h
src/wim/: WimMounter.cpp  WimMounter.h  WindowsEditionSelector.cpp  WindowsEditionSelector.h
test_hirens_ISO/: debug_drives.txt  error boot.txt  iso_extract_log.txt  log.txt
test_logs/hirens/: general_log.txt  hirens ISO boot.txt  iso_extract_log.txt  iso_file_copy_log.txt  log.txt  reformat_log.txt
test_logs/windows 10/: general_log.txt  iso_extract_log.txt  log.txt
test_win10_ISO/: debug_drives.txt  error boot.txt  iso_extract_log.txt  iso_file_copy_log.txt  log.txt
tests/: test_partition_status.cpp  test_recover_space.cpp  utils_tests.cpp
tools/: binary_to_header.py  validate_translations.cpp
